--- a/index.html
+++ b/index.html
@@ -16,38 +16,17 @@
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.27.0",
-    "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/"
+    "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/",
+    "firebase-admin": "https://aistudiocdn.com/firebase-admin@^13.5.0",
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.5.2"
   }
 }
 </script>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        html, body, #root {
-            height: 100%;
-        }
-        body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #0f172a;
-            color: #e2e8f0;
-            margin: 0;
-        }
-        /* Card flip animation styles */
-        .perspective { perspective: 1000px; }
-        .preserve-3d { transform-style: preserve-3d; }
-        .rotate-y-180 { transform: rotateY(180deg); }
-        .backface-hidden {
-            backface-visibility: hidden;
-            -webkit-backface-visibility: hidden; /* Safari support */
-        }
-    </style>
-  <link rel="stylesheet" href="/index.css">
+<link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
+<script type="module" src="/index.tsx"></script>
 </body>
 </html>
