--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     "firebase/": "https://aistudiocdn.com/firebase@^12.4.0/",
     "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0"
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
+    "firebase": "https://aistudiocdn.com/firebase@^12.5.0"
   }
 }
 </script>
