--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "firebase": "https://aistudiocdn.com/firebase@^12.5.0"
+    "firebase": "https://aistudiocdn.com/firebase@^12.5.0",
+    "lodash-es": "https://aistudiocdn.com/lodash-es@^4.17.21"
   }
 }
 </script>
