chore: refactor word handling to use unique identifiers and update translation logic

--- a/instructions_uk.html
+++ b/instructions_uk.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <title>Інструкція з використання</title>
     <style>
         body {
@@ -62,7 +62,7 @@
               На головному екрані натисніть кнопку <strong>"Get Started"</strong>. Відкриється вікно, де ви можете обрати джерело слів:
             </p>
             <ul>
-              <li><strong>Built-in:</strong> Вибрати один із готових, вбудованих словників. Деякі з них містять файли з прикладами речень.</li>
+              <li><strong>Built-in:</strong> Вибрати один із готових, вбудованих словників.</li>
               <li><strong>From Computer:</strong> Завантажити власний файл зі словами у форматі Excel (.xlsx).</li>
             </ul>
         </section>
@@ -71,32 +71,39 @@
           <h2>2. Підготовка файлів</h2>
           
           <h3>Словник слів (.xlsx)</h3>
-          <p>Для створення власного набору карток, ваш файл Excel має відповідати чіткій структурі:</p>
+          <p>Для створення власного набору карток, ваш файл Excel має відповідати чіткій структурі. Для автоматичного визначення мов додайте заголовок у першому рядку:</p>
           <ul>
-            <li><strong>Колонка A:</strong> Слово російською або українською мовою.</li>
-            <li><strong>Колонка B:</strong> <em>Має бути порожньою.</em></li>
-            <li><strong>Колонка C:</strong> Переклад англійською мовою.</li>
-            <li><strong>Колонка D:</strong> <em>Має бути порожньою.</em></li>
+            <li><strong>Рядок 1 (Заголовок):</strong> Введіть назву мови у відповідну колонку (наприклад, "Іспанська" в A1, "Англійська" в C1). <strong>Це рекомендований спосіб.</strong></li>
+            <li><strong>Рядок 2 і далі (Слова):</strong>
+                <ul>
+                    <li><strong>Колонка A:</strong> Слово першою мовою.</li>
+                    <li><strong>Колонка B:</strong> <em>Має бути порожньою.</em></li>
+                    <li><strong>Колонка C:</strong> Переклад другою мовою.</li>
+                    <li><strong>Колонка D:</strong> <em>Має бути порожньою.</em></li>
+                </ul>
+            </li>
           </ul>
           <div>
             <p>Приклад структури для кількох наборів:</p>
             <pre><code>
-|    A    | B |     C     | D |    E    | F |    G    |
-|---------|---|-----------|---|---------|---|---------|
-|   кот   |   |    cat    |   |  зелений|   |  green  |
-| собака  |   |    dog    |   | червоний|   |   red   |
+|     A     | B |      C      | D |      E     | F |       G      |
+|-----------|---|-------------|---|------------|---|--------------|
+| Іспанська |   |  Англійська |   |  Німецька  |   |  Англійська  | &lt;-- Рядок заголовка
+|-----------|---|-------------|---|------------|---|--------------|
+|   gato    |   |     cat     |   |   Katze    |   |     cat      | &lt;-- Рядки зі словами
+|   perro   |   |     dog     |   |    Hund    |   |     dog      |
             </code></pre>
           </div>
           <p>
             Ви можете розміщувати кілька наборів слів на одному аркуші. Наступний набір починатиметься з колонки <strong>E</strong>, потім <strong>I</strong>, і так далі (з кроком у 4 колонки).
           </p>
           <p>
-            <strong>Важливо:</strong> Якщо у вашому наборі більше 30 слів, він буде автоматично розділений на менші частини для зручнішого вивчення.
+            <strong>Примітка:</strong> Якщо ви завантажите файл без рядка заголовка, він все одно працюватиме, але мови будуть названі загально (наприклад, "Мова A", "Мова C").
           </p>
 
           <h3>Речення-приклади (опціонально)</h3>
           <p>
-            Щоб бачити слова в контексті, ви можете завантажити файл із прикладами. Це можна зробити на екрані тренування.
+            Щоб бачити слова в контексті, ви можете завантажити файл із прикладами. Цей файл має містити приклади англійською мовою.
           </p>
           <ul>
             <li><strong>Формат .xlsx:</strong> <strong>Колонка A</strong> — англійське слово, <strong>Колонка B</strong> — речення-приклад.</li>
@@ -109,37 +116,22 @@
           <ul>
             <li><strong>Вибір набору:</strong> Після завантаження файлу оберіть один із доступних наборів слів для початку.</li>
             <li><strong>Інтервальне повторення:</strong> Додаток показує лише ті слова, які нові або час яких настав для повторення.</li>
-            <li><strong>Кнопки "Know" / "Don't know":</strong> Натискання <strong>"Know"</strong> збільшує інтервал до наступного показу слова. Натискання <strong>"Don't know"</strong> скидає прогрес, і слово з'явиться у наступній сесії.</li>
+            <li><strong>Кнопки "Know" / "Don't know":</strong> Натискання <strong>"Know"</strong> збільшує інтервал до наступного показу слова. Натискання <strong>"Don't know"</strong> скидає прогрес.</li>
             <li><strong>Перевертання картки:</strong> Натисніть на картку, щоб побачити переклад.</li>
-            <li><strong>Прослуховування:</strong> Натисніть іконку динаміка, щоб почути якісну вимову.</li>
-            <li><strong>Перемішування:</strong> Натисніть іконку з двома стрілками, щоб перемішати поточний набір слів.</li>
-            <li><strong>Список слів:</strong> Натисніть іконку зі стрілками вгору-вниз, щоб показати повний список слів у поточному наборі.</li>
+            <li><strong>Прослуховування:</strong> Натисніть іконку динаміка, щоб почути вимову (англійською).</li>
+            <li><strong>Напрямок перекладу:</strong> Використовуйте перемикач (напр., "Іспанська ↔ Англійська"), щоб змінити напрямок тренування.</li>
           </ul>
-        </section>
-
-        <section>
-          <h2>4. Тренування невідомих слів</h2>
-          <p>
-            Слова, які ви відмітили як <strong>"Don't know"</strong>, зберігаються в окремому списку для кожного набору. Після завершення основної сесії з'явиться кнопка для їх тренування, що дозволяє зосередитись на найскладнішому матеріалі.
-          </p>
         </section>
         
         <section>
-          <h2>5. Керування реченнями</h2>
+          <h2>4. Керування прогресом</h2>
           <p>
-            На екрані тренування, під карткою, знаходиться блок керування реченнями. Натисніть <strong>"Upload Sentences (Optional)"</strong> або <strong>"Update"</strong>, щоб додати або оновити речення з файлу. Щоб видалити всі завантажені речення, натисніть кнопку <strong>"Clear"</strong>.
-          </p>
-        </section>
-
-        <section>
-          <h2>6. Керування прогресом</h2>
-          <p>
-            Увесь ваш прогрес (вивчені та невідомі слова) зберігається локально у вашому браузері. У верхній частині екрана є кнопки для керування цим прогресом:
+            Весь ваш прогрес зберігається у вашому акаунті, прив'язаному до конкретного словника.
           </p>
            <ul>
-                <li><strong>Learned:</strong> Відкриває вікно зі списком усіх слів, які ви відмітили як "Know". Ви можете побачити загальну кількість вивчених слів та поточний етап їх вивчення.</li>
-                <li><strong>Reset:</strong> Повністю видаляє **весь** збережений прогрес (вивчені слова та список "Don't know") для **всього** поточного словника. Ця дія незворотна і дозволяє почати навчання з чистого аркуша.</li>
-                <li><strong>Change:</strong> Дозволяє змінити поточний словник. Натискання цієї кнопки відкриє вікно вибору файлу, де ви зможете завантажити новий словник або вибрати інший із вбудованих.</li>
+                <li><strong>Learned:</strong> Відкриває вікно зі списком усіх вивчених слів.</li>
+                <li><strong>Reset:</strong> Повністю видаляє весь збережений прогрес для поточного словника.</li>
+                <li><strong>Change:</strong> Дозволяє змінити поточний словник.</li>
             </ul>
         </section>
     </div>
