chore: add Russian instructions and update Ukrainian instructions for clarity

--- a/instructions_uk.html
+++ b/instructions_uk.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Інструкція з використання</title>
     <style>
         body {
@@ -68,9 +68,8 @@
         </section>
 
         <section>
-          <h2>2. Підготовка файлів</h2>
+          <h2>2. Підготовка файлу Excel</h2>
           
-          <h3>Словник слів (.xlsx)</h3>
           <p>Для створення власного набору карток, ваш файл Excel має відповідати чіткій структурі. Для автоматичного визначення мов додайте заголовок у першому рядку:</p>
           <ul>
             <li><strong>Рядок 1 (Заголовок):</strong> Введіть назву мови у відповідну колонку (наприклад, "Іспанська" в A1, "Англійська" в C1). <strong>Це рекомендований спосіб.</strong></li>
@@ -84,31 +83,22 @@
             </li>
           </ul>
           <div>
-            <p>Приклад структури для кількох наборів:</p>
+            <p>Приклад структури:</p>
             <pre><code>
-|     A     | B |      C      | D |      E     | F |       G      |
-|-----------|---|-------------|---|------------|---|--------------|
-| Іспанська |   |  Англійська |   |  Німецька  |   |  Англійська  | &lt;-- Рядок заголовка
-|-----------|---|-------------|---|------------|---|--------------|
-|   gato    |   |     cat     |   |   Katze    |   |     cat      | &lt;-- Рядки зі словами
-|   perro   |   |     dog     |   |    Hund    |   |     dog      |
+|     A     | B |      C      | D |
+|-----------|---|-------------|---|
+|  Іспанська |   | Англійська  |   | &lt;-- Заголовок
+|-----------|---|-------------|---|
+|   gato    |   |     cat     |   | &lt;-- Слово
+|   perro   |   |     dog     |   |
             </code></pre>
           </div>
           <p>
             Ви можете розміщувати кілька наборів слів на одному аркуші. Наступний набір починатиметься з колонки <strong>E</strong>, потім <strong>I</strong>, і так далі (з кроком у 4 колонки).
           </p>
           <p>
-            <strong>Примітка:</strong> Якщо ви завантажите файл без рядка заголовка, він все одно працюватиме, але мови будуть названі загально (наприклад, "Мова A", "Мова C").
+            <strong>Примітка:</strong> Якщо ви завантажите файл без рядка заголовка, він все одно працюватиме, але мови будуть названі загально (наприклад, "Language A").
           </p>
-
-          <h3>Речення-приклади (опціонально)</h3>
-          <p>
-            Щоб бачити слова в контексті, ви можете завантажити файл із прикладами. Цей файл має містити приклади англійською мовою.
-          </p>
-          <ul>
-            <li><strong>Формат .xlsx:</strong> <strong>Колонка A</strong> — англійське слово, <strong>Колонка B</strong> — речення-приклад.</li>
-            <li><strong>Формат .json:</strong> Об'єкт, де ключ — англійське слово (в нижньому регістрі), а значення — речення.</li>
-          </ul>
         </section>
 
         <section>
@@ -122,9 +112,20 @@
             <li><strong>Напрямок перекладу:</strong> Використовуйте перемикач (напр., "Іспанська ↔ Англійська"), щоб змінити напрямок тренування.</li>
           </ul>
         </section>
+
+        <section>
+            <h2>4. Тренування незнайомих слів</h2>
+            <p>
+                Слова, які ви позначаєте як "Don't know", зберігаються в окремому списку. Після завершення сесії з'явиться кнопка для їх тренування. Ви можете перемикатися між режимами:
+            </p>
+            <ul>
+                <li><strong>Write:</strong> Введіть переклад вручну.</li>
+                <li><strong>Guess:</strong> Виберіть правильний переклад з трьох варіантів.</li>
+            </ul>
+        </section>
         
         <section>
-          <h2>4. Керування прогресом</h2>
+          <h2>5. Керування прогресом</h2>
           <p>
             Весь ваш прогрес зберігається у вашому акаунті, прив'язаному до конкретного словника.
           </p>
