--- a/instructions_uk.html
+++ b/instructions_uk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Інструкція з використання</title>
+    <title>User Guide</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -54,7 +54,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Інструкція з використання</h1>
+        <h1>User Guide</h1>
 
         <section>
             <h2>1. Початок роботи</h2>
