feat: add user dictionary upload and save functionality

--- a/instructions_ru.html
+++ b/instructions_ru.html
@@ -63,7 +63,8 @@
             </p>
             <ul>
               <li><strong>Built-in:</strong> Выбрать один из готовых, встроенных словарей.</li>
-              <li><strong>From Computer:</strong> Загрузить собственный файл со словами в формате Excel (.xlsx).</li>
+              <li><strong>My Dictionaries:</strong> Выбрать из словарей, которые вы ранее загрузили с компьютера.</li>
+              <li><strong>From Computer:</strong> Загрузить собственный файл со словами в формате Excel (.xlsx). Он будет сохранен для будущих сессий.</li>
             </ul>
         </section>
 
@@ -127,8 +128,12 @@
         <section>
           <h2>5. Управление прогрессом</h2>
           <p>
-            Весь ваш прогресс сохраняется в вашем аккаунте, привязанном к конкретному словарю.
+            Ваш прогресс (выученные и незнакомые слова) сохраняется автоматически.
           </p>
+           <ul>
+                <li><strong>Если вы вошли в систему:</strong> С помощью аккаунта Google ваш прогресс сохраняется в облаке, что позволяет вам продолжать обучение на любом устройстве.</li>
+                <li><strong>Если вы не вошли в систему:</strong> Ваш прогресс сохраняется локально в вашем браузере. Это означает, что вы можете продолжить с того места, где остановились, на том же компьютере, но ваш прогресс не будет доступен на других устройствах.</li>
+            </ul>
            <ul>
                 <li><strong>Learned:</strong> Открывает окно со списком всех выученных слов.</li>
                 <li><strong>Reset:</strong> Полностью удаляет весь сохраненный прогресс для текущего словаря.</li>
