--- a/instructions_uk.html
+++ b/instructions_uk.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Інструкція з використання</title>
     <style>
         body {
@@ -63,7 +63,8 @@
             </p>
             <ul>
               <li><strong>Built-in:</strong> Вибрати один із готових, вбудованих словників.</li>
-              <li><strong>From Computer:</strong> Завантажити власний файл зі словами у форматі Excel (.xlsx).</li>
+              <li><strong>My Dictionaries:</strong> Вибрати зі словників, які ви раніше завантажили з комп'ютера.</li>
+              <li><strong>From Computer:</strong> Завантажити власний файл зі словами у форматі Excel (.xlsx). Його буде збережено для майбутніх сесій.</li>
             </ul>
         </section>
 
@@ -122,12 +123,23 @@
             <li><strong>Напрямок перекладу:</strong> Використовуйте перемикач (напр., "Іспанська ↔ Англійська"), щоб змінити напрямок тренування.</li>
           </ul>
         </section>
+
+        <section>
+            <h2>4. Тренування невідомих слів</h2>
+            <p>
+                Слова, які ви позначаєте як "Don't know", зберігаються в окремому списку для кожного набору. Після завершення основної сесії з'явиться кнопка для їх тренування, що дозволить вам зосередитися на найскладнішому матеріалі в режимі "Write" (Писати) або "Guess" (Вгадувати).
+            </p>
+        </section>
         
         <section>
-          <h2>4. Керування прогресом</h2>
+          <h2>5. Керування прогресом</h2>
           <p>
-            Весь ваш прогрес зберігається у вашому акаунті, прив'язаному до конкретного словника.
+            Ваш прогрес (вивчені та невідомі слова) зберігається автоматично.
           </p>
+           <ul>
+                <li><strong>Якщо ви увійшли в систему:</strong> За допомогою облікового запису Google ваш прогрес зберігається в хмарі, що дозволяє вам продовжувати навчання на будь-якому пристрої.</li>
+                <li><strong>Якщо ви не увійшли в систему:</strong> Ваш прогрес зберігається локально у вашому браузері. Це означає, що ви можете продовжити з того місця, де зупинилися, на тому ж комп'ютері, але ваш прогрес не буде доступний на інших пристроях.</li>
+            </ul>
            <ul>
                 <li><strong>Learned:</strong> Відкриває вікно зі списком усіх вивчених слів.</li>
                 <li><strong>Reset:</strong> Повністю видаляє весь збережений прогрес для поточного словника.</li>
