--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "firebase": "https://aistudiocdn.com/firebase@^12.5.0"
+    "firebase": "https://aistudiocdn.com/firebase@^12.5.0",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0"
   }
 }
 </script>
