--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.30.0",
-    "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/"
+    "react-firebase-hooks/": "https://aistudiocdn.com/react-firebase-hooks@^5.1.1/",
+    "react-dom": "https://aistudiocdn.com/react-dom@^19.2.0"
   }
 }
 </script>
